Fix overflow on mobile

--- a/timesheet.css
+++ b/timesheet.css
@@ -1,6 +1,9 @@
 body {
   font-family: sans-serif;
   font-size: 13px;
+  margin: 0;
+}
+body > div {
   margin: 0 auto;
   padding: 0 10px;
   max-width: 800px;
